syntax = "proto3";

package pb;

import "memory_message.proto";

option go_package = "/pb";

message CPU {
    string brand = 1;
    string name = 2;
    uint32 number_cores = 3;            //Cpu核心数。
    uint32 number_thread = 4;           //CPU线程数
    double min_ghz = 5;                 //最小频率   
    double max_ghz = 6;                 //最大频率
}

message GPU {
    string brand = 1;
    string name = 2;
    double min_ghz = 3;
    double max_ghz = 4;
    Memory memory = 5;                   //存储，包括ram、store
}