syntax = "proto3";

package pb;

option go_package = "/pb";

message Screen {
    message Resolution {
        uint32 width = 1;
        uint32 height = 2;
    }
    enum Panel{                                 //屏幕面板的类型。
        UNKNOWN = 0;
        IPS = 1;
        OLED = 2;
    }

    float size_inch = 1;                        //屏幕的尺寸。
    Resolution resolution = 2;
    Panel panel = 3;
    bool multitouch = 4;                        //是否是多点触控屏幕
}